--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ baseurl: "/local-addon-oneclick-admin"
 url: "https://jpollock.github.io"
 
 # Theme
-remote_theme: pages-themes/minimal@v0.2.0
+remote_theme: pages-themes/hacker@v0.2.0
 plugins:
-  - jekyll-remote-theme
+- jekyll-remote-theme 
 
 # Markdown processing
 markdown: kramdown
